I was never here.

--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
 
 <header class="doc-head">
 	<nav role="navigation">
-		<h1>Illustration, Design, and Photography in Newfoundland, Canada by Geri Coady</h1>
-		<a href="/" title="Illustration, Design, and Photography in Newfoundland, Canada by Geri Coady"><h2></h2></a>
+		<h1><a href="/" title="Illustration, Design, and Photography in Newfoundland, Canada by Geri Coady">Illustration, Design, and Photography in Newfoundland, Canada by Geri Coady</a></h1>
 		<ul>
 			<li><a href="#">illustration</a></li>
 			<li><a href="#">design</a></li>
