--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
 	<nav role="navigation">
 		<h1><a href="/" title="Illustration, Design, and Photography in Newfoundland, Canada by Geri Coady">Illustration, Design, and Photography in Newfoundland, Canada by Geri Coady</a></h1>
 		<ul>
-			<li><a href="#">illustration</a></li>
-			<li><a href="#">design</a></li>
-			<li><a href="#">photography</a></li>
-			<li><a href="#">about me</a></li>
-			<li><a href="#">blog</a></li>
-			<li><a href="#">get in touch</a></li>
+			<li><a class="icon-illustration" href="#">illustration</a></li>
+			<li><a class="icon-design" href="#">design</a></li>
+			<li><a class="icon-photo" href="#">photography</a></li>
+			<li><a class="icon-about" href="#">about me</a></li>
+			<li><a class="icon-blog" href="#">blog</a></li>
+			<li><a class="icon-contact" href="#">get in touch</a></li>
 		</ul>
 	</nav>
 	<div role="banner">
