Added split categories for small screen

--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
 	<h2>I like to talk about…</h2>
 	<ul>
 		<li><a href="/blog/advertising">Advertising</a></li>
-		<li><a href="/blog/artanddesign">Art & Design</a></li>
+		<li><a href="/blog/artanddesign">Design</a></li>
+		<li><a href="/blog/illustration">Illustration</a></li>
 		<li><a href="/blog/life">Life</a></li>
 		<li><a href="/blog/photography">Photography</a></li>
 		<li><a href="/blog/reviews">Reviews</a></li>
